--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
           integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
           crossorigin="anonymous"/>
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Alex React App</title>
+    <link rel="manifest" href="/manifest.json">
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -20,7 +21,9 @@
 <script>
     if ('serviceWorker' in navigator) {
         window.addEventListener('load', function () {
-            navigator.serviceWorker.register('/service-worker.js').then(function (registration) {
+            navigator.serviceWorker.register('/service-worker.js', {
+                scope: '.'
+            }).then(function (registration) {
                 // Registration was successful
                 console.log('ServiceWorker успешно зарегистрирован со сферойдействия: ', registration.scope);
             }, function (err) {
@@ -31,6 +34,14 @@
     } else {
         console.log('ServiceWorker не поддерживается');
     }
+</script>
+<script>
+    window.addEventListener('appinstalled', (evt) => {
+        fetch('http://localhost:3000/', {
+            method: 'GET',
+            credentials: 'include',
+        });
+    });
 </script>
 </body>
 </html>
